[project]
name = "suam_example"
version = ""
description = ""
authors = [
    {name = "Example Author", email = "example@domain.tld"},
]
dependencies = [
    "-e file:///${PROJECT_ROOT}/simple-uam#egg=simple-uam",
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}

[tool.pdm]

[project.scripts]
example = "suam_example.cli:main"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
