[project]
name = "suam_example"
version = ""
description = ""
authors = [
    {name = "Example Author", email = "example@domain.tld"},
]
dependencies = [
    "simple-uam @ file:///${PROJECT_ROOT}/simple_uam",
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}

[project.optional-dependencies]

[tool.pdm]

[tool.pdm.build]
editable-backend = "editables"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/simple_uam#egg=simple-uam",
]

[project.scripts]
example = "suam_example.cli:main"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
