[project]
name = "suam-example"
version = ""
description = ""
authors = [
    {name = "Example Author", email = "example@domain.tld"},
]
dependencies = [
    "simple-uam @ file:///${PROJECT_ROOT}/simple_uam",
    "editables>=0.3",
]
requires-python = ">=3.9,<3.11"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]

[project.scripts]
example = "suam_example.cli:main"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
